k8s/services.yaml
apiVersion: v1
kind: Service
metadata:
  name: values-microservice-svc
spec:
  type: ClusterIP
  selector:
    tier: backend
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
