k8s/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: values-microservice-ingress
  namespace: $NAMESPACE
  annotations:
    kubernetes.io/ingress.class: nginx
    certmanager.k8s.io/cluster-issuer: letsencrypt-prod
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  tls:
  - hosts:
    - $ACR_NAME.australiaeast.cloudapp.azure.com
    secretName: tls-secret
  rules:
  - host: $ACR_NAME.australiaeast.cloudapp.azure.com
    http:
      paths:
      - backend:
          serviceName: values-microservice-svc
          servicePort: 80
        path: /
